# rtic-stm32g474-blink

./: Cargo.toml
src/: main.rs
